--- a/licensingservice/licensingservice.yml
+++ b/licensingservice/licensingservice.yml
@@ -1,6 +1,6 @@
 example.property: "I AM IN THE DEFAULT"
 spring.datasource.driver: "com.mysql.jdbc.Driver"
-spring.datasource.url: "jdbc:mysql://${DATABASE_HOST}:${DATABASESERVER_PORT}/${DATABASE_NAME}"
+spring.datasource.url: "jdbc:mysql://localhost:3306/mydb"
 spring.datasource.password: ""
 spring.datasource.username: "root"
 spring.jpa.properties.hibernate.dialect: "org.hibernate.dialect.MySQLDialect"
