--- a/organizationservice/organizationservice-dev.yml
+++ b/organizationservice/organizationservice-dev.yml
@@ -1,10 +1,7 @@
-example.property: "I AM IN THE DEFAULT"
+example.organization.property: "I AM THE DEFAULT ORGANIZATION SERVICE"
 spring.datasource.driver: "com.mysql.jdbc.Driver"
-spring.datasource.url: "jdbc:mysql://0.tcp.ngrok.io:18992/mydb"
+spring.datasource.url: "jdbc:mysql://0.tcp.ngrok.io:18992/eagle"
 spring.datasource.password: ""
 spring.datasource.username: "root"
 spring.jpa.properties.hibernate.dialect: "org.hibernate.dialect.MySQLDialect"
 logging.level.org.hibernate.SQL: "debug"
-
-
-
