--- a/organizationservice/organizationservice.yml
+++ b/organizationservice/organizationservice.yml
@@ -1,6 +1,6 @@
 example.organization.property: "I AM THE DEFAULT ORGANIZATION SERVICE"
 spring.datasource.driver: "com.mysql.jdbc.Driver"
-spring.datasource.url: "jdbc:mysql://localhost:3306/eagle"
+spring.datasource.url: "jdbc:mysql://0.tcp.ngrok.io:18047/mydb"
 spring.datasource.password: ""
 spring.datasource.username: "root"
 spring.jpa.properties.hibernate.dialect: "org.hibernate.dialect.MySQLDialect"
